<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="sharedpreferences.androidatc.com.sharedpreferences.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/data_to_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="63dp"
        android:text="@string/save_data"/>
    <EditText
        android:id="@+id/enter_data"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="55dp"
        android:gravity="left|top"
        android:layout_toRightOf="@+id/data_to_save"
        android:hint="@string/enter_data"/>
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_to_save"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="66dp"
        android:text="@string/save" />
    <TextView
        android:id="@+id/data_to_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/save"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="63dp"
        android:text="@string/load_data"/>
    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_to_load"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="36dp"
        android:text="@string/show"/>
    <EditText
        android:id="@+id/load_data"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/enter_data"
        android:layout_below="@id/save"
        android:hint="@string/saved_data"
        android:gravity="top|left"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"/>

</RelativeLayout>
